--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express": "^4.21.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "@reduxjs/toolkit": "^1.9.5",
+    "react-redux": "^8.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
